--- a/index.html
+++ b/index.html
@@ -129,12 +129,14 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <img src="public/img/avatar.png" class="avatar">
+
                         <div class="modal-header text-center">
                             <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
+
                         <div class="modal-body mx-3">
                             <div class="md-form mb-5">
                                 <label data-error="wrong" data-success="right" for="username">Username</label>
@@ -149,8 +151,8 @@
                             <div>
                                 <i id="newreg" data-toggle="modal" data-target="#newRegModal"> Clicca qui per registrarti </i>
                             </div>
-
                         </div>
+
                         <div class="modal-footer d-flex justify-content-center">
                             <button class="btn btn-default" id="logBtn">Login</button>
                         </div>
@@ -209,7 +211,7 @@
 
 
         document.getElementById("logBtn").addEventListener("click", login(id, password));
-        document.getElementById("newreg").addEventListener("click", change);
+        document.getElementById("logBtn").addEventListener("click", change);
 
     </script>
 
