closing div in reserved

--- a/reserved.html
+++ b/reserved.html
@@ -106,10 +106,8 @@
       <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
     </ul>
   </div> <!--mettere misure per togliere la barre-->
-    
-         <div id="ctable2">
-          <div id="ctable"></div>
-         </div>
+         <div id="ctable"></div>
+         <div id="ctable2"></div>
          
 
     <!-- button id="client Btn" @click="openClient" title="clientTable">
