--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Home NoloNoloPlus</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 
         <!-- fontawesome icons -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -71,13 +71,15 @@
         il router? -> come integrarlo? -->
 
             <nav class="navbar navbar-expand-lg"> <!--background-color: #31708E;-->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
                 </button>
-                <div class="collapse navbar-collapse">
+
+                <div class="collapse navbar-collapse"  id="navbarCollapse">
                     <a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>
 
-                    <ul class="navbar-nav navbar-nav ml-auto"></ul>
+                    <ul class="navbar-nav navbar-nav ml-auto">
                         <li class="nav-item" title="Reserved" data-toggle="modal" data-target="#loginModal">
                             <a class="nav-item" > Login  </a>
                         </li>
@@ -86,7 +88,6 @@
                             <span id="workerLabel" style="display: none;">Worker</span>
                         </li>
                     </ul>
-
                 </div>
 
             </nav>
@@ -94,7 +95,7 @@
 
 
 
-        <div id="main_page">
+        <div id="main_page" class="flex-container">
             <!--QUI APPAIONO LE COSE!-->
         </div>
 
@@ -103,7 +104,7 @@
         </div>
 
         <!-- modal for calculating rental -->
-        <div class="modal fade" id="calcModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="calcModal" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">    
                     <div class="modal-header text-center">
@@ -208,7 +209,6 @@
         var password = document.getElementById("pass").value;
 
         console.log(id + password);
-
 
         document.getElementById("logBtn").addEventListener("click", login(id, password));
         document.getElementById("logBtn").addEventListener("click", change);
