aggiunto controllo login worker

--- a/index.html
+++ b/index.html
@@ -91,9 +91,18 @@
                 </div>
 
             </nav>
+
         </div>
 
+        <div id="introduzione" class="flex-container">
+            UNA GRANDE SCELTA DI YACHT DI LUSSO A NOLEGGIO </br>
+            NoloNoloPlus, uno delle nuovi broker di noleggio di yacht, è specializzata nel noleggio di yacht nel Mediterraneo. 
+            L’azienda è orgogliosa di selezionare con cura ogni yacht di lusso a noleggio nella sua flotta e di conoscere personalmente 
+            quasi ognuna delle imbarcazioni proposte e gli equipaggi. Sfogliate la nostra ampia selezione di yacht a noleggio con 
+            equipaggio. Contattateci per qualsiasi richiesta – vi garantiamo la risposta più veloce del settore.
+        </div>
 
+        
 
         <div id="main_page" class="flex-container">
             <!--QUI APPAIONO LE COSE!-->
