modifiche a login e controllo utenti

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
                                 <input type="password" id="pass" class="form-control validate" placeholder="Enter Password">
                             </div>
 
+                            <div id="loginfo"> </div>
+
                             <div>
                                 <i id="newreg" data-toggle="modal" data-target="#newRegModal"> Clicca qui per registrarti </i>
                             </div>
