--- a/reserved.html
+++ b/reserved.html
@@ -111,10 +111,10 @@
   <div id="ctable"></div>
   <div id="ctable2"></div>
 
-  <!--prova modale per aggiunta elemento-->
+  <!--modale per aggiunta elemento-->
   <div class="modal" tabindex="-1" id="addModal">
     <div class="modal-dialog">
-      <div style='width:100%; margin:10%; background: #f3cfd5' class="modal-content">
+      <div style='width:100%; border-radius: 0px; margin:10%; background: #f3cfd5; overflow-y: auto;' class="modal-content">
         <div class="modal-header text-center">
           <h4 class="modal-title w-100 font-weight-bold">Add new item</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
