--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             </div>
         </div> 
 
+        <!--div class="flex-container" id="logModContainer" -->
             <!-- modal for login -->
             <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -171,6 +172,7 @@
                     </div>
                 </div>
             </div> 
+        <!--/div-->
             
 
             <!-- modal for new reg -->
