--- a/reserved.html
+++ b/reserved.html
@@ -36,7 +36,7 @@
 
 	<body>
     <!-- Navbar -->
-    <div id="app">
+    <div style='height:56px' id="app">
 
 
         <nav class="navbar navbar-expand-lg"> 
