"vogliamo pusharci questa merda a vicenda?"

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             
 
             <!-- modal for new reg -->
-            <div class="container" id="newRegC" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal fade" id="newRegC" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header text-center">
@@ -208,6 +208,23 @@
                     </div>
                 </div>
             </div>
+
+            <footer>
+                <div class="flex-container" id="footer">
+                    <div class="element">
+                        <h3 class="title">CONTATTI </h3> 
+                        NoloNoloPlus.Yacht@gmail.com
+                    </div>
+                    <div class="element">
+                        <h3 class="title">DOVE TROVARCI </h3> 
+                        Mura Anteo Zamboni, Bologna
+                    </div>
+                    <div class="element">
+                        <h3 class="title">SOCI </h3> 
+                        Francesca Chiriacò </br> Sofia Gavanelli </br> Federica Palestini
+                    </div>
+                </div>
+            </footer>
 
 	</body>
 
