--- a/reserved.html
+++ b/reserved.html
@@ -114,7 +114,7 @@
   <!--modale per aggiunta elemento-->
   <div class="modal" tabindex="-1" id="addModal">
     <div class="modal-dialog">
-      <div style='width:100%; border-radius: 0px; margin:10%; background: #f3cfd5; overflow-y: auto;' class="modal-content">
+      <div style='width:100%; height: 80%; border-radius: 0px; margin:10%; background: #f3cfd5; overflow-y: auto;' class="modal-content">
         <div class="modal-header text-center">
           <h4 class="modal-title w-100 font-weight-bold">Add new item</h4>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -191,7 +191,7 @@
     </div>
   </div>
 
-  <!--modale per modifica cliente elemento-->
+  <!--modale per modifica cliente-->
   <div class="modal" tabindex="-1" id="modifyModal">
     <div class="modal-dialog">
       <div style='width:100%; border-radius: 0px; margin:10%; background: #f3cfd5; overflow-y: auto;' class="modal-content">
@@ -207,7 +207,7 @@
         <form class="row g-3">
           <div class="col-md-6">
             <label for="inputName" class="form-label">New name</label>
-            <input type="text" class="form-control" id="inputProdID" placeholder="Enter name">
+            <input type="text" class="form-control" id="inputName" placeholder="Enter name">
           </div>
 
           <div class="col-md-6">
@@ -226,6 +226,7 @@
     </div>
   </div>
 
+  
 <script type="text/javascript">
   $(window).on('load',function(){
       $('#loginModal').modal('show');
