--- a/reserved.html
+++ b/reserved.html
@@ -36,7 +36,7 @@
 
 	<body>
     <!-- Navbar -->
-    <div style='height:56px' id="app">
+    <div style='height:56px; z-index:1' id="app">
 
 
         <nav class="navbar navbar-expand-lg"> 
@@ -94,7 +94,7 @@
 
    
 <!--SIDEBAR ATTIVITA' FUNZIONARI-->
-  <div class="sidebar">
+  <div class="sidebar"style='z-index:1'>
     <header>Activities</header>
     <ul> 
       <li><a href="#" id="inventoryBtn"><i class="fas fa-archive"></i>Inventory</a></li>  <!--per vedere l'inventario degli ogetti-->
