--- a/manager-react/public/index.html
+++ b/manager-react/public/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <link href="%PUBLIC_URL%/index.css" rel="stylesheet" />
+
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
+
+    <!-- CSS PER LA SIDEBAR-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alpertuna/react-metismenu/master/dist/react-metismenu-standart.min.css" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,20 +39,109 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- CSS PER IL MENÙ-->
+  <title>NoloNoloPlus Manager</title>
+</head>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<body>
+  <div id="navbarMenu">
+    <nav class="navbar navbar-expand-lg">
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="" role="button"><i class="fa fa-bars" aria-hidden="true" style="color:#e6e6ff"></i></span>
+      </button>
+
+      <a id="logoname" class="nav-item">NoloNoloPlus</a>
+
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav navbar-nav ml-auto">
+          <li class="nav-item" title="Reserved" data-toggle="modal" data-target="#loginModal">
+            Login
+          </li>
+          <li class="nav-item" title="Reserved" onclick="load_new('/worker-module')">
+            <i class="icon fas fa-user-lock"></i>
+            <span id="workerLabel" style="display: none;">Worker</span>
+          </li>
+        </ul>
+      </div>
+
+    </nav>
+
+  </div>
+
+  <!-- modal for login -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <img src="public/img/avatar.png" class="avatar">
+
+        <div class="modal-header text-center">
+          <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body mx-3">
+          <div class="md-form mb-5">
+            <label data-error="wrong" data-success="right" for="username">Username</label>
+            <input type="email" id="username" class="form-control validate" placeholder="Enter Username">
+          </div>
+
+          <div class="md-form mb-4">
+            <label data-error="wrong" data-success="right" for="pass">Password</label>
+            <input type="password" id="pass" class="form-control validate" placeholder="Enter Password">
+          </div>
+
+          <div id="loginfo"> </div>
+        </div>
+
+        <div class="modal-footer d-flex justify-content-center">
+          <button class="btn btn-default" id="EnterlogBtn">Login</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!--/div-->
+
+
+  
+
+  <!-- *************************DIV PER I GRAFICI*********************-->
+  <div id="root"></div>
+
+
+  <footer>
+    <div class="flex-container" id="footer">
+      <div class="element">
+        <h3 class="title">CONTATTI </h3>
+        NoloNoloPlus.Yacht@gmail.com
+      </div>
+      <div class="element">
+        <h3 class="title">DOVE TROVARCI </h3>
+        Mura Anteo Zamboni, Bologna
+      </div>
+      <div class="element">
+        <h3 class="title">SOCI </h3>
+        Francesca Chiriacò </br> Sofia Gavanelli </br> Federica Palestini
+      </div>
+    </div>
+  </footer>
+
+</body>
+
+<script type="text/javascript">
+  /*$(window).on('load',function() {
+    populate(); onclick="home()"
+});*/
+
+  document.getElementById("logoname").addEventListener("click", home);
+  document.getElementById("EnterlogBtn").addEventListener("click", login);
+</script>
+
+</body>
+
 </html>
