--- a/reserved.html
+++ b/reserved.html
@@ -4,6 +4,7 @@
 		<title>Area Riservata</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "icon" href = "/public/img/nolonolo.png" type = "image/x-icon">
 
         <!-- fontawesome icons -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -55,43 +56,6 @@
         </nav>
     </div>
 
-
-    <!-- modal for login -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <img src="public/img/avatar.png" class="avatar">
-                <div class="modal-header text-center">
-                    <h4 class="modal-title w-100 font-weight-bold">Login here</h4>
-                    <!--button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button -->
-                </div>
-                <div class="modal-body mx-3">
-                    <div class="md-form mb-5">
-                        <label data-error="wrong" data-success="right" for="defaultForm-email">Username</label>
-                        <input type="text" id="userWorker" class="form-control validate" placeholder="Enter Username">
-                    </div>
-
-                    <div class="md-form mb-4">
-                        <label data-error="wrong" data-success="right" for="defaultForm-pass">Password</label>
-                        <input type="password" id="passWorker" class="form-control validate" placeholder="Enter Password"> &nbsp; &nbsp;
-                        <p>Manager</p>
-
-                        <label class="switch">
-                      <input id="managCheck" type="checkbox"> 
-                      <span class="slider round"></span>
-                    </label>
-                    </div>
-
-                </div>
-                <div class="modal-footer d-flex justify-content-center">
-                    <button class="btn btn-default" id="enterWorker">Login</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
    
 <!--SIDEBAR ATTIVITA' FUNZIONARI-->
   <div class="sidebar"style='z-index:1'>
@@ -103,63 +67,32 @@
       <li><a href="#" id="createBtn"><i class="fas fa-cart-plus"></i>Create rent</a></li> <!--per creare noleggio-->
       <li><a href="#" id="contactBtn"><i class="far fa-envelope"></i></i>Contact</a></li> <!--per contattare il manager-->
       <li><a href="#" id="personalAreaBtn"><i class="far fa-id-badge"></i>Personal Area</a></li> <!--per vedere informazioni personali-->
-      <li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
+      <li><a href="#" id="logout"><i class="fas fa-home"></i>Log out</a></li> <!--per vedere informazioni personali-->
     </ul>
   </div> 
   
   <!--div per contenuto della sidebar-->
-  <div id="ctable"></div>
-  <div id="ctable2"></div>
-
-  <!--modale per modifica cliente-->
-  <div class="modal" tabindex="-1" id="modifyModal">
-    <div class="modal-dialog">
-      <div style='width:100%; border-radius: 0px; margin:10%; background: #f3cfd5; overflow-y: auto;' class="modal-content">
-        <div class="modal-header text-center">
-          <h4 class="modal-title w-100 font-weight-bold">Modify</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-          </button>
-      </div>
-
-        <div class="modal-body">
-          
-        <form class="row g-3">
-          <div class="col-md-6">
-            <label for="inputName" class="form-label">New name</label>
-            <input type="text" class="form-control" id="inputName" placeholder="Enter name">
-          </div>
-
-          <div class="col-md-6">
-            <label for="inputSurname" class="form-label">New surname</label>
-            <input type="text" class="form-control" id="inputSurname" placeholder="Enter surname">
-          </div>
-        </form>
-
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
-        </div>
-      </div>
-        </div>
-      </div>
-    </div>
+  <div id="ctable"> <img src="/public/img/nolonolo.png" style="margin-left: 20em;"></div>
+  <div id="ctable2">
   </div>
+
+
 
   
 <script type="text/javascript">
-  $(window).on('load',function(){
-      $('#loginModal').modal('show');
-  });
+ // $(window).on('load',function(){
+    //  $('#loginModal').modal('show');
+ // });
 
   document.getElementById("clientBtn").addEventListener("click", openClient);
   document.getElementById("inventoryBtn").addEventListener("click", openInventory);
   document.getElementById("rentBtn").addEventListener("click", openRents);
   document.getElementById("contactBtn").addEventListener("click", openContacts);
   document.getElementById("createBtn").addEventListener("click", openCreate);
+  document.getElementById("logout").addEventListener("click", logOut);
 
   
-  document.getElementById("enterWorker").addEventListener("click", login);
+ // document.getElementById("enterWorker").addEventListener("click", login);
 
 </script>
 	</body>
