traduzione in italiano

--- a/reserved.html
+++ b/reserved.html
@@ -59,14 +59,14 @@
    
 <!--SIDEBAR ATTIVITA' FUNZIONARI-->
   <div class="sidebar"style='z-index:1'>
-    <header>Activities</header>
+    <header>Attività</header>
     <ul> 
-      <li><a href="#" id="inventoryBtn"><i class="fas fa-archive"></i>Inventory</a></li>  <!--per vedere l'inventario degli ogetti-->
-      <li><a href="#" id="rentBtn"><i class="fas fa-truck-loading"></i>Rents</a></li> <!--per vedere tutti i noleggi-->
-      <li><a href="#" id="clientBtn"><i class="far fa-address-card"></i>Clients</a></li> <!--per vedere tutti i clienti -->
-      <li><a href="#" id="createBtn"><i class="fas fa-cart-plus"></i>Create rent</a></li> <!--per creare noleggio-->
-      <li><a href="#" id="addBtn"><i class="far fa-plus-square"></i></i></i>Add Product</a></li> <!--per aggiungere prodotto-->
-      <li><a href="#" id="personalAreaBtn"><i class="far fa-id-badge"></i>Personal Area</a></li> <!--per vedere informazioni personali-->
+      <li><a href="#" id="inventoryBtn"><i class="fas fa-archive"></i>Inventario</a></li>  <!--per vedere l'inventario degli ogetti-->
+      <li><a href="#" id="rentBtn"><i class="fas fa-truck-loading"></i>Noleggi</a></li> <!--per vedere tutti i noleggi-->
+      <li><a href="#" id="clientBtn"><i class="far fa-address-card"></i>Clienti</a></li> <!--per vedere tutti i clienti -->
+      <li><a href="#" id="createBtn"><i class="fas fa-cart-plus"></i>Crea Noleggio</a></li> <!--per creare noleggio-->
+      <li><a href="#" id="addBtn"><i class="far fa-plus-square"></i></i></i>Crea Prodotto</a></li> <!--per aggiungere prodotto-->
+      <li><a href="#" id="personalAreaBtn"><i class="far fa-id-badge"></i>Area Personale</a></li> <!--per vedere informazioni personali-->
       <li><a href="#" id="logout"><i class="fas fa-home"></i>Log out</a></li> <!--per vedere informazioni personali-->
     </ul>
   </div> 
