--- a/app-vue/public/index.html
+++ b/app-vue/public/index.html
@@ -7,8 +7,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
 
-    <link rel="icon" href="prova.png"> <!--href="<%= BASE_URL %>favicon.ico"-->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="../src/assets/logo.png"> <!--href="<%= BASE_URL %>favicon.ico"-->
+    <title>NoloNoloPlus</title>
   </head>
   <body>
     <noscript>
