--- a/manager-react/public/index.html
+++ b/manager-react/public/index.html
@@ -14,7 +14,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link href="%PUBLIC_URL%/index.css" rel="stylesheet" />
+  <link href="../src/App.css" rel="stylesheet" />
 
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
