--- a/reserved.html
+++ b/reserved.html
@@ -25,6 +25,8 @@
         <!-- link rel="stylesheet" id="stylesheetComp" href="/public/css/access.css" -->
         
         <script>
+
+            is_logged()
             function load(url){
                 window.open(url, '_self');
             }
