--- a/reserved.html
+++ b/reserved.html
@@ -28,7 +28,7 @@
 
             is_logged()
             function load(url){
-                window.open(url, '_self');
+                window.open(url, '/manager');
             }
 
             function load_new(url){
@@ -51,7 +51,7 @@
                 <!--<a id="logoname" class="nav-item" href="#">NoloNoloPlus</a>-->
 
                 <ul class="navbar-nav navbar-nav ml-auto"></ul>
-                <!-- (dentro nav-link) disabled --><button disabled id="managBtn" onclick="load('/manager-module')"><i class="fas fa-lock">Dashboard</i></a>
+                <!-- (dentro nav-link) disabled --><button  id="managBtn" onclick="load('/manager')"><i class="fas fa-lock">Dashboard</i></a>
                 </li>
                 </ul>
             </div>
